Workflow names no longer break words, instead they show ellipsis overflow (...). Closes #2367.

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -205,6 +205,9 @@ pre.line-numbers {
 
 .resource-name-link {
   display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .resource-selector {
